export type UserRole = "USER" | "ADMIN";
export type UserStatus = "ACTIVE" | "BANNED";
export type ListingStatus = "AVAILABLE" | "RESERVED" | "SOLD" | "HIDDEN";
export type ItemCondition = "NEW" | "LIKE_NEW" | "USED" | "DAMAGED";
export type OfferStatus = "PENDING" | "ACCEPTED" | "DECLINED" | "CANCELLED" | "EXPIRED" | "COUNTERED";
export type DealStatus = "OPEN" | "CANCELLED" | "COMPLETED";
export type DeliveryStatus = "PENDING" | "SHIPPING" | "DELIVERED";
export type MeetupStatus = "SCHEDULED" | "COMPLETED" | "CANCELLED";
export type ReportStatus = "PENDING" | "RESOLVED" | "DISMISSED";

export interface Profile {
  id: string;
  full_name: string;
  display_name?: string | null;
  phone?: string | null;
  address?: string | null;
  dob?: string | null;
  social_links?: Record<string, string> | null;
  privacy_settings?: Record<string, any> | null;
  avatar_url?: string | null;
  banner_url?: string | null;
  shop_slug?: string | null;
  bio?: string | null;
  lat?: number | null;
  lng?: number | null;
}

export interface User {
  id: string;
  email: string;
  role: UserRole;
  status: UserStatus;
  created_at: string;
  profile?: Profile | null;
}

export interface UserPublic {
  id: string;
  created_at: string;
  profile?: Profile | null;
}

export interface Category {
  id: string;
  name: string;
  slug?: string | null;
  image_url?: string | null;
  parent_id?: string | null;
}

export interface Listing {
  id: string;
  owner_id: string;
  category_id?: string | null;
  title: string;
  description?: string | null;
  price: string;
  condition: ItemCondition;
  brand?: string | null;
  has_warranty?: boolean;
  in_live_room?: boolean;
  location_data?: Record<string, unknown> | null;
  image_urls: string[];
  video_url?: string | null;
  status: ListingStatus;
  created_at: string;
  updated_at?: string | null;
  owner?: User | null;
  category?: Category | null;
}

export interface Offer {
  id: string;
  listing_id: string;
  buyer_id: string;
  price: string;
  status: OfferStatus;
  parent_offer_id?: string | null;
  is_counter_from_seller: boolean;
  expires_at?: string | null;
  created_at: string;
  listing_title?: string;
}

export interface Meetup {
  id: string;
  deal_id: string;
  scheduled_at: string;
  location?: { lat: number; lng: number; address?: string } | null;
  status: MeetupStatus;
  buyer_checked_in: boolean;
  seller_checked_in: boolean;
  created_at: string;
}

export interface Deal {
  id: string;
  listing_id: string;
  buyer_id: string;
  seller_id: string;
  agreed_price: string;
  status: DealStatus;
  delivery_status: DeliveryStatus;
  tracking_code?: string | null;
  has_dispute: boolean;
  dispute_reason?: string | null;
  created_at: string;
  listing_title?: string;
  meetups?: Meetup[];
}

export interface Message {
  id: string;
  conversation_id: string;
  sender_id: string;
  content: string;
  created_at: string;
  sender?: User | null;
  status?: string;
}

export interface Conversation {
  id: string;
  title?: string | null;
  listing_id?: string | null;
  created_at: string;
  participants: User[];
  messages: Message[];
}

export interface Report {
  id: string;
  reporter_id: string;
  target_type: "USER" | "LISTING" | "MESSAGE";
  target_id: string;
  reason: string;
  status: ReportStatus;
  created_at: string;
}

export interface Block {
  id: string;
  blocker_id: string;
  blocked_id: string;
  created_at: string;
}

export interface AuthResponse {
  access_token: string;
  token_type: string;
  user: User;
}

export interface ListingQuestion {
  id: string;
  listing_id: string;
  asker_id?: string | null;
  question: string;
  answer?: string | null;
  created_at: string;
  updated_at: string;
  asker?: UserPublic | null;
}

export interface Review {
  id: string;
  reviewer_id?: string | null;
  target_id: string;
  deal_id?: string | null;
  rating: number;
  comment?: string | null;
  created_at: string;
  reviewer?: UserPublic | null;
}

export interface WishlistItem {
  id: string;
  listing_id: string;
  created_at: string;
}

export interface Wishlist {
  id: string;
  name: string;
  is_public: boolean;
  created_at: string;
  items: WishlistItem[];
}

export interface MapLegend {
  id: string;
  symbol_type: string;
  icon: string;
  name: string;
  description: string;
  color: string;
  created_at: string;
  updated_at: string;
}

